[gd_scene load_steps=3 format=3 uid="uid://bkvc3lm2vroly"]

[ext_resource type="Script" path="res://components/GatherableComponent.gd" id="1_5sm7m"]
[ext_resource type="Theme" uid="uid://ccb7csnxqndm6" path="res://ui/my_ui_theme.tres" id="2_g2u8h"]

[node name="GatherableComponent" type="Area2D"]
script = ExtResource("1_5sm7m")

[node name="Timer" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -23.0
offset_top = -28.0
offset_right = 23.0
offset_bottom = -20.0
theme = ExtResource("2_g2u8h")
max_value = 10.0
value = 10.0
show_percentage = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_gathering_timer_timeout"]
